gcc-14.2.0/gcc/testsuite/gm2/switches/case/fail/subrangecase5.mod
version https://git-lfs.github.com/spec/v1
oid sha256:18f00ddf4839cdfe050d430178bd8574da9c52ebdd44ad72a99d9fe0bbf7ef95
size 226
